# MagicExamUtilities

./: .env-example  .gitignore  README.md  README_en.md  gui.py  main.py  pyproject.toml
tests/: __init__.py  conftest.py  test_cache.py  test_models.py  test_rate_limiter.py  test_retrieval.py  test_worker.py  test_workers.py
utilities/: DeepSeekOCR.py  DumpPDF.py  GenericVisionLanguageOCR.py  STT.py  Summarization.py  cache.py  models.py  rate_limiter.py  worker.py
utilities/knowledge_base/: __init__.py  manager.py  models.py
utilities/retrieval/: __init__.py  cache_loader.py  retriever.py  tools.py
utilities/workers/: __init__.py  ask_ai_worker.py  ocr_worker.py  stt_worker.py  summarization_worker.py
