[project]
name = "exammagicutilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.7.4",
    "flask>=3.1.2",
    "gradio>=6.0.1",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "numpy>=1.24.0",
    "openai>=2.8.1",
    "pdf2image>=1.17.0",
    "requests>=2.32.5",
    "sentence-transformers>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=utilities",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.setuptools]
packages = ["utilities"]

[tool.setuptools.package-data]
utilities = ["py"]
